; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/s2255/extr_s2255drv.c_norm_minw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/s2255/extr_s2255drv.c_norm_minw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s2255_vc = type { i32 }

@V4L2_STD_525_60 = common dso_local global i32 0, align 4
@LINE_SZ_1CIFS_NTSC = common dso_local global i32 0, align 4
@LINE_SZ_1CIFS_PAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.s2255_vc*)* @norm_minw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @norm_minw(%struct.s2255_vc* %0) #0 {
  %2 = alloca %struct.s2255_vc*, align 8
  store %struct.s2255_vc* %0, %struct.s2255_vc** %2, align 8
  %3 = load %struct.s2255_vc*, %struct.s2255_vc** %2, align 8
  %4 = getelementptr inbounds %struct.s2255_vc, %struct.s2255_vc* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @V4L2_STD_525_60, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @LINE_SZ_1CIFS_NTSC, align 4
  br label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @LINE_SZ_1CIFS_PAL, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = phi i32 [ %10, %9 ], [ %12, %11 ]
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
